# Light-Dip-Detector-using-BEAGLE-Y

./: CMakeLists.txt  README.md  noworky  noworky.c
app/: CMakeLists.txt
app/include/: dip_detector.h  periodTimer.h  sampler.h  udp.h
app/src/: dip_detector.c  main.c  sampler.c  udp.c
hal/: CMakeLists.txt
hal/include/hal/: encoder.h  light_sensor.h  pwm_led.h
hal/src/: encoder.c  light_sensor.c  pwm_led.c
